fix: adjust sidebar overflow property and refine Staffs component styles for better layout

--- a/pages/admin/AdminDashboard.module.css
+++ b/pages/admin/AdminDashboard.module.css
@@ -66,7 +66,7 @@
   height: 6rem;
   /* position: fixed; */
   z-index: 40;
-  overflow: hidden;
+  /* overflow: hidden; */
 
 }
 
