--- a/pages/admin/Staffs.module.css
+++ b/pages/admin/Staffs.module.css
@@ -2,7 +2,7 @@
 .container {
     position: relative;
     padding: 1rem;
-    max-width: 1000px;
+    max-width: 900px;
     margin: 0 auto;
   }
   
@@ -58,7 +58,7 @@
     }
   
     .grid {
-      grid-template-columns: repeat(auto-fit, minmax(9.375rem, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax( 1fr));
       gap: 0.5rem;
       margin-bottom: 2.5rem;
      
